// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a styled component with another styled component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component with another styled component 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;
